--- a/lobe.html
+++ b/lobe.html
@@ -86,39 +86,91 @@
     overflow-x: auto;
     border-radius: 10px; /* Rounded corners */
 }
-.glitch {
+
+
+
+        .glitch {
     position: fixed;
-    width: 50px;
-    height: 50px;
-    background: rgba(255, 255, 255, 0.8);
-    box-shadow: 1px 0 rgba(255, 0, 0, 0.8), -1px 0 rgba(0, 255, 255, 0.8);
     pointer-events: none;
-    animation: glitch-animation 1s infinite alternate-reverse;
-    transform: translate(-50%, -50%); /* Center the element to the click position */
+    content: attr(data-text);
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
 }
-@keyframes glitch-animation {
-    0%, 100% {
-        clip-path: polygon(0 0, 100% 0, 100% 55%, 0 55%);
+
+.glitch::before, .glitch::after {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: rgba(255, 0, 0, 0.8);  /* red */
+    background: currentColor;
+    clip: rect(44px, 450px, 56px, 0);
+    animation: glitch-animation-1 1s infinite;
+}
+
+.glitch::after {
+    color: rgba(0, 255, 255, 0.8);  /* cyan */
+    clip: rect(33px, 450px, 44px, 0);
+    animation: glitch-animation-2 1.5s infinite;
+}
+
+@keyframes glitch-animation-1 {
+    0% { 
+        transform: translate(0px, 0px); 
+        clip: rect(33px, 450px, 44px, 0); 
     }
-    15% {
-        clip-path: polygon(0 5%, 100% 5%, 100% 60%, 0 60%);
+    20% { 
+        transform: translate(-5px, 3px); 
+        clip: rect(33px, 450px, 44px, 0); 
     }
-    30% {
-        clip-path: polygon(0 20%, 100% 20%, 100% 75%, 0 75%);
+    40% { 
+        transform: translate(5px, -3px); 
+        clip: rect(55px, 450px, 56px, 0); 
     }
-    45% {
-        clip-path: polygon(0 30%, 100% 30%, 100% 80%, 0 80%);
+    60% { 
+        transform: translate(-5px, 5px); 
+        clip: rect(33px, 450px, 44px, 0); 
     }
-    60% {
-        clip-path: polygon(0 40%, 100% 40%, 100% 85%, 0 85%);
+    80% { 
+        transform: translate(5px, -5px); 
+        clip: rect(55px, 450px, 56px, 0); 
     }
-    75% {
-        clip-path: polygon(0 50%, 100% 50%, 100% 90%, 0 90%);
-    }
-    90% {
-        clip-path: polygon(0 70%, 100% 70%, 100% 100%, 0 100%);
+    100% { 
+        transform: translate(0px, 0px); 
+        clip: rect(22px, 450px, 33px, 0); 
     }
 }
+
+@keyframes glitch-animation-2 {
+    0% { 
+        transform: translate(0px, 0px); 
+        clip: rect(22px, 450px, 33px, 0); 
+    }
+    20% { 
+        transform: translate(5px, -3px); 
+        clip: rect(55px, 450px, 56px, 0); 
+    }
+    40% { 
+        transform: translate(-5px, 3px); 
+        clip: rect(44px, 450px, 55px, 0); 
+    }
+    60% { 
+        transform: translate(5px, -5px); 
+        clip: rect(77px, 450px, 88px, 0); 
+    }
+    80% { 
+        transform: translate(-5px, 5px); 
+        clip: rect(55px, 450px, 56px, 0); 
+    }
+    100% { 
+        transform: translate(0px, 0px); 
+        clip: rect(22px, 450px, 33px, 0); 
+    }
+}
+
 
 
     </style>
@@ -138,15 +190,17 @@
 
 <script>
    document.addEventListener("click", function(event) {
+    let glitchText = document.elementFromPoint(event.clientX, event.clientY).innerText || 'Glitch';
     let glitch = document.createElement("div");
     glitch.classList.add("glitch");
+    glitch.setAttribute("data-text", glitchText);
     glitch.style.left = event.pageX + "px";
     glitch.style.top = event.pageY + "px";
     document.body.appendChild(glitch);
 
     setTimeout(() => {
         glitch.remove();
-    }, 1000); // remove after 1 second (duration of the glitch-animation)
+    }, 1500); // remove after 1.5 seconds
 });
 
 
