--- a/lobebin.html
+++ b/lobebin.html
@@ -92,24 +92,22 @@
         }
 
         .gradient-background {
-            background: linear-gradient(300deg, deepskyblue, #000000, #0095c6);
-            background-size: 180% 180%;
-            animation: gradient-animation 18s ease infinite;
-        }
+  background: linear-gradient(300deg,#4a5568,#000000,#2c3e50);
+  background-size: 180% 180%;
+  animation: gradient-animation 18s ease infinite;
+}
 
-        @keyframes gradient-animation {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
-        }
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
     </style>
 </head>
 
