--- a/lobebin.html
+++ b/lobebin.html
@@ -92,9 +92,9 @@
         }
 
         .gradient-background {
-  background: linear-gradient(300deg,#4a5568,#000000,#2c3e50);
-  background-size: 180% 180%;
-  animation: gradient-animation 18s ease infinite;
+  background: linear-gradient(300deg,#4a5568,#000000,#2c3e50,#000000);
+  background-size: 240% 240%;
+  animation: gradient-animation 24s ease infinite;
 }
 
 @keyframes gradient-animation {
