--- a/lobebin.html
+++ b/lobebin.html
@@ -30,6 +30,8 @@
             background-color: #2D3748; /* Dark Background */
             border-radius: 20px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    max-height: 90vh;  /* 90% of the viewport height */
+    overflow-y: auto;
         }
 
         .search-container {
